# refprompt-asd

./: .gitignore  main.py  pyproject.toml  readme.md
agent_toy_ad/: __init__.py  audio.py  baseline.py  classical_benchmark.py  cli.py  config.py  data.py  evaluation.py  exemplar_experiments.py  features.py  models.py  observations.py  pipeline.py  reasoning.py  reference_examples_benchmark.py  reporting.py  smoothing.py  spectrogram_image.py  supervised_splits.py  torch_ae_baseline.py  waveform_image.py
data/: README.md
docs/: discussion-style-findings.md  poster-copy.md  reproducibility.md
results/: main_results.csv  main_results.md
