[project]
name = "refprompt-asd"
version = "0.1.0"
description = "Reference-based prompting for low-shot acoustic anomaly detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.0",
    "pillow>=11.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "torch>=2.6.0",
]

[project.scripts]
refprompt-asd = "agent_toy_ad.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_toy_ad"]
